--- a/Portifolio-HTML-e-CSS-Curso3-aula_2/estilos/style.css
+++ b/Portifolio-HTML-e-CSS-Curso3-aula_2/estilos/style.css
@@ -34,7 +34,7 @@ body {
 
 .cabecalho__menu__link {
     font-family: var(--fonte-secundaria);
-    font-size: 24px;
+    font-size: 1.5rem;
     font-weight: 400;
     color: var(--cor-terciaria);
 }
@@ -44,10 +44,11 @@ body {
     display: flex;
     align-items: center;
     justify-content: space-between;
+    gap: 82px;
 }
 
 .apresentacao__conteudo {
-    width: 615px;
+    width: 50%;
     display: flex;
     flex-direction: column;
     gap: 40px;
@@ -55,7 +56,7 @@ body {
 
 .apresentacao__conteudo__titulo {
     color: var(--cor-secundaria);
-    font-size: 36px;
+    font-size: 2.25rem;
     font-family: var(--fonte-primaria);
 }
 
@@ -66,7 +67,7 @@ body {
 
 .apresentacao__conteudo__texto {
     color: var(--cor-secundaria);
-    font-size: 24px;
+    font-size: 1.5rem;
     font-family: var(--fonte-secundaria);
 }
 
@@ -87,26 +88,29 @@ body {
     color: var(--cor-secundaria);
     font-family: var(--fonte-primaria);
     font-weight: 400;
-    font-size: 24px;
+    font-size: 1.5rem;
 }
 
-.apresentacao__links__link {
+.apresentacao__links__navegacao {
     display: flex;
     justify-content: center;
     gap: 16px;
     border: 2px solid var(--cor-terciaria);
-    width: 378px;
+    width: 50%;
     text-align: center;
     border-radius: 8px;
-    font-size: 24px;
+    font-size: 1.5rem;
     font-weight: 600;
     padding: 21.5px 0;
     text-decoration: none;
     color: var(--cor-secundaria);
     font-family: var(--fonte-secundaria);
 }
-.apresentacao__links__link:hover {
+.apresentacao__links__navegacao:hover {
     background-color: var(--cor-hover);
+}
+.apresentacao__imagem {
+    width: 50%; 
 }
 
     .rodape {
@@ -116,10 +120,25 @@ body {
         width: 100%;
         text-align: center;
         font-family: var(--fonte-primaria);
-        font-size: 24px;
+        font-size: 1.5rem;
         font-weight: 400;
 
         & a {
             color: var(--cor-primaria);
         }
     }
+@media (max-width: 1200px){
+    .apresentacao{
+        flex-direction: column-reverse;
+        padding: 5% ;
+    }
+    .apresentacao__conteudo{
+        width: auto;
+    }
+    .cabecalho__menu{
+        justify-content: center;
+    }
+    .cabecalho{
+        padding: 10%;
+    }
+}
